# linux-contributors

./: .gitignore  .gitmodules  AGENT_FORMAT_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  analyze_china.py  batch_analyzer_china.py  gui_viewer.py  linux_kernel_analyzer.py  main.py  pyproject.toml  scraper.py  test_agent.py  translations.py
.claude/: settings.local.json
.claude/agents/: kernel-commit-analyzer.md
data/: china_analysis.json  china_summary.csv  chinese_companies_v5_0_v5_3.jsonl  chinese_companies_v5_0_v5_3_summary.json  chinese_companies_v5_10_v6_0_summary.json  chinese_companies_v5_3_v5_10.jsonl  chinese_companies_v5_3_v5_10_summary.json  chinese_companies_v6_0_v6_10_summary.json  chinese_companies_v6_10_v6_18_summary.json  chinese_companies_v6_9_v6_10.jsonl  chinese_companies_v6_9_v6_10_summary.json  commit_scores_v6_9_v6_10_all.json  commit_scores_v6_9_v6_10_summary.json  failed_commits_v5_0_v5_3.json  failed_commits_v5_10_v6_0.json  failed_commits_v5_3_v5_10.json  failed_commits_v6_0_v6_10.json  failed_commits_v6_10_v6_18.json  failed_commits_v6_5_v6_6.json  failed_commits_v6_9_v6_10.json  repaired_commits_v5_0_v5_3.json  v5.0.json  v5.1.json  v5.10.json  v5.11.json  v5.12.json  v5.13.json  v5.14.json  v5.15.json  v5.16.json  v5.17.json  v5.18.json  v5.19.json  v5.2.json  v5.3.json  v5.4.json  v5.5.json  v5.6.json  v5.7.json  v5.8.json  (+20 more)
