[project]
name = "linux-contributors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "PyQt6>=6.7.0",
    "matplotlib>=3.9.0",
]
